Support infinite progress in new style notification.

There was an undocumented behavior that you can make progress
notification with infinite progress bar by setting negative values to
RichNotificationData.progress.
This behavior is used in DownloadItemNotification.

TEST=manual
BUG=766313

Change-Id: Ic1055866abeef5e1e7e44c732e5406725801373d